added content to projectspec.html

--- a/interviewguide.html
+++ b/interviewguide.html
@@ -8,8 +8,8 @@
 
 <nav>
     <ul>
-        <li><a href="teammembers.html">Team members</a></li>
-        <li><a href="pproposal.html">Project proposal</a></li>
+        <li>Team members</li>
+        <li>Project proposal</li>
         <li><a href="projectspec.html">Project specification</a></li>
         <li><a href="interviewguide.html">Interview guide</a></li>
     </ul>
