--- a/projectspec.html
+++ b/projectspec.html
@@ -7,8 +7,8 @@
 <body>
 <nav>
     <ul>
-        <li><a href="teammembers.html">Team members</a></li>
-        <li><a href="pproposal.html">Project proposal</a></li>
+        <li>Team members</li>
+        <li>Project proposal</li>
         <li><a href="projectspec.html">Project specification</a></li>
         <li><a href="interviewguide.html">Interview guide</a></li>
     </ul>
@@ -16,6 +16,46 @@
 <h1>Project Specification</h1>
 <p><s>The project spec is available <a href src="">here</a></s></p>
 
+<h2>Brief</h2>
+<p>
+    The goal of the project is to build a medium-scale web
+    application (i.e. one that one person alone could not build)
+    that solves a practical problem based on a given brief.
+    In 2018, we want to tackle big societal challenges. The goal
+    is to build a web-based application that contributes towards
+    a solution to one of the challenges proposed by OpenIDEO.
+    OpenIDEO is an online platform for crowdsourcing solutions
+    to world’s biggest problems. They frequently post challenges
+    sponsored by external organisations, to which anyone can
+    contribute solutions. The challenges are listed
+    <a href="https://challenges.openideo.com/challenge">here</a>.
+</p>
+
+<h2>Marks Breakdown</h2>
+<p>
+    The handbook states that the project is worth 50% of the final
+    mark. In previous editions of the course, students suggested
+    that the project should be worth a higher percentage, given
+    its large scope. I agree with this proposal, so, this
+    semester, I will make the project is worth 60% of your
+    final mark. If you wish to be marked according to the
+    handbook, you should let me know before the start of Week
+    3, otherwise your mark will be automatically calculated with
+    a 60/40 split.
+</p>
+<p>
+    To ensure continuous progress and to maximise the feedback
+    that you receive throughout the semester, the project will
+    be broken down into multiple deliverables. Apart from Weeks
+    1 and 8, all weeks will have a deliverable due, some for
+    formative assessment and some for summative assessment.
+    This means that even though all will be graded, the mark you
+    will receive for the deliverable will only count towards your
+    final mark in the summative assessment. The formative assessment
+    of deliverables is designed to give you feedback on your
+    progress and a sense of whether you are on the right track.
+    The deliverables will have the following weights:
+</p>
 <!-- this link doesn't work for some reason... -->
 <p><a href src="index.html">Back</a></p>
 
