added links to spec and interview

--- a/ProbProposal.html
+++ b/ProbProposal.html
@@ -6,10 +6,12 @@
 </head>
 <body>
 
-<ul><li>Team Members</li>
-<li>Problem proposal</li>
-<li>Project specification</li>
-    <li>Interview guide</li></ul>>
+<ul>
+    <li><a href="TeamMember.html">Team Members</a></li>
+    <li><a href="ProbProposal.html">Problem proposal</a></li>
+    <li><a href="projectspec.html">Project specification</a></li>
+    <li><a href="interviewguide.html">Interview guide</a></li>
+</ul>>
 <a href="index.html"><button>Back</button></a>
 <h1>Problem Proposal</h1>
 </body>
