--- a/projectspec.html
+++ b/projectspec.html
@@ -7,8 +7,8 @@
 <body>
 <nav>
     <ul>
-        <li>Team members</li>
-        <li>Project proposal</li>
+        <li><a href="TeamMember.html">Team members</a></li>
+        <li><a href="ProbProposal.html">Project proposal</a></li>
         <li><a href="projectspec.html">Project specification</a></li>
         <li><a href="interviewguide.html">Interview guide</a></li>
     </ul>
