Add links connect to Index page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Index</title>
 </head>
 <body>
-<h1>Team Members</h1>
-<h1>Problem proposal</h1>
-<h1>Project specification</h1>
-<h1>Interview guide</h1>
+<h1><a href="TeamMember.html">Team Members</a></h1>
+<h1><a href="ProbProposal.html">Problem proposal</a></h1>
+<h1><a href="projectspec.html">Project specification</a></h1>
+<h1><a href="interviewguide.html">Interview guide</a></h1>
 
 </body>
 </html>
