fixed back links in guide and spec

--- a/projectspec.html
+++ b/projectspec.html
@@ -56,8 +56,7 @@
     progress and a sense of whether you are on the right track.
     The deliverables will have the following weights:
 </p>
-<!-- this link doesn't work for some reason... -->
-<p><a href src="index.html">Back</a></p>
+<p><a href=index.html">Back</a></p>
 
 </body>
 </html>
