fixed link (again)

--- a/projectspec.html
+++ b/projectspec.html
@@ -14,7 +14,7 @@
     </ul>
 </nav>
 <h1>Project Specification</h1>
-<p><s>The project spec is available <a href src="">here</a></s></p>
+<p><s>The project spec is available <a href="">here</a></s></p>
 
 <h2>Brief</h2>
 <p>
@@ -56,7 +56,7 @@
     progress and a sense of whether you are on the right track.
     The deliverables will have the following weights:
 </p>
-<p><a href=index.html">Back</a></p>
+<p><a href="index.html">Back</a></p>
 
 </body>
 </html>
