added content in ProbProposal

--- a/ProbProposal.html
+++ b/ProbProposal.html
@@ -11,8 +11,51 @@
     <li><a href="ProbProposal.html">Problem proposal</a></li>
     <li><a href="projectspec.html">Project specification</a></li>
     <li><a href="interviewguide.html">Interview guide</a></li>
-</ul>>
+</ul>
+<h1>Food Waste</h1>
+
+<h2>Challenge</h2>
+<p><q>How might we dramatically reduce waste by transforming our
+    relationship with food?</q></p>
+
+<h2>The Problem</h2>
+
+<p>
+
+    Each year 250,000 tonnes of food is thrown out in Victoria alone, making up
+    25% of household rubbish. This means the resources that went into growing,
+    processing, transporting and storing this food is wasted. While various
+    charity organisations work to reduce food wastage from businesses, there is
+    very little being done to help individuals cook more efficiently.
+
+    Increasing work hours and busy lives often result in food rotting in a
+    kitchen before it gets a chance to be eaten. This is made worse by the cheaper
+    unit costs of buying food in bulk, which results in individuals buying more
+    than they are likely to use.
+
+    Governments in the UK, NSW and VIC have implemented the “Love Food, Hate Waste”
+    campaign, which aims to inform people of the problem of food wastage, storage
+    tips, and provide recipe ideas for leftover produce. While helpful to some,
+    this approach does little to help those who already lead busy lives, and do
+    not have time to cook additional recipes each week.
+
+</p>
+
+<h2>Solution</h2>
+<p>The web app is going to be a platform to help establish relationship between
+    individuals (eaters) and cooks who are willing to share the meals they cook
+    by setting up a “home restaurant”.
+
+    People who are too busy to cook can post a request online, describing what
+    kind of food they are looking for and the budget they have. Those who have
+    time and extra food can then cook based on need and sell their food at a lower
+    price than those in restaurants.
+
+    There will be a rating system for every cook in which all the eaters can
+    rate and comment about the quality of the foods prepared by the cook. This
+    would help other eaters while choosing a home restaurant.
+</p>
+
 <a href="index.html"><button>Back</button></a>
-<h1>Problem Proposal</h1>
 </body>
 </html>
