added some interview questions

--- a/ProbProposal.html
+++ b/ProbProposal.html
@@ -5,13 +5,16 @@
     <title>Problem Proposal</title>
 </head>
 <body>
+<nav>
+    <ul>
+        <li><a href="TeamMember.html">Team Members</a></li>
+        <li><a href="ProbProposal.html">Problem proposal</a></li>
+        <li><a href="projectspec.html">Project specification</a></li>
+        <li><a href="interviewguide.html">Interview guide</a></li>
+    </ul>
+</nav>
 
-<ul>
-    <li><a href="TeamMember.html">Team Members</a></li>
-    <li><a href="ProbProposal.html">Problem proposal</a></li>
-    <li><a href="projectspec.html">Project specification</a></li>
-    <li><a href="interviewguide.html">Interview guide</a></li>
-</ul>
+<section>
 <h1>Food Waste</h1>
 
 <h2>Challenge</h2>
@@ -55,6 +58,8 @@
     rate and comment about the quality of the foods prepared by the cook. This
     would help other eaters while choosing a home restaurant.
 </p>
+
+</section>
 
 <a href="index.html"><button>Back</button></a>
 </body>
