--- a/interviewguide.html
+++ b/interviewguide.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>Interview Guide</title>
 </head>
@@ -9,13 +10,50 @@
 <nav>
     <ul>
         <li><a href="TeamMember.html">Team members</a></li>
-        <li><a href="ProbProposal.html">Project proposal</a></li>
+        <li><a href="ProbProposal.html">Problem proposal</a></li>
         <li><a href="projectspec.html">Project specification</a></li>
         <li><a href="interviewguide.html">Interview guide</a></li>
     </ul>
 </nav>
 <h1>Interview Guide</h1>
 
+<p>This table shows our questions for the initial interview stage. Together, these questions will provide us with
+a deeper understanding of how people cook in their homes, the factors leading to food wastage, how people order
+food, and they role technology plays in their kitchens.</p>
+<table>
+    <tr>
+        <th>
+            Question(s)
+        </th>
+        <th>
+            Rationale
+        </th>
+    </tr>
+    <tr>
+        <td>
+            <ul>
+                <li>How often do you cook at home?</li>
+                <li>What factors affect your decision whether or not to cook?</li>
+                <li>Do you typically cook for yourself, or for others?</li>
+            </ul>
+        </td>
+        <td>
+            How and why people cook
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <ul>
+
+            </ul>
+        </td>
+        <td>
+            Factors causing food wastage
+        </td>
+    </tr>
+
+</table>
+<p>This table is based on the <a href="InterviewGuideTemplate.pdf">"Interview Guide Template"</a> by Kasia Mierzejewska of MAKE Studios.</p>
 <p><a href="index.html">Back</a></p>
 
 </body>
