added interview questions

--- a/interviewguide.html
+++ b/interviewguide.html
@@ -44,7 +44,9 @@ food, and they role technology plays in their kitchens.</p>
     <tr>
         <td>
             <ul>
-
+                <li>How and how often do usually you buy food? (go grocery, home delivery meal kit?)</li>
+                <li>Is food wastage a problem for you? If so, how does it happen?</li>
+                
             </ul>
         </td>
         <td>
