added more interview questions

--- a/interviewguide.html
+++ b/interviewguide.html
@@ -45,12 +45,51 @@ food, and they role technology plays in their kitchens.</p>
         <td>
             <ul>
                 <li>How and how often do usually you buy food? (go grocery, home delivery meal kit?)</li>
-                <li>Is food wastage a problem for you? If so, how does it happen?</li>
+                <li><s>Is food wastage a problem for you? If so, how does it happen?</s></li>
+                <li>Do you ever have to throw food out? Why?</li>
+                <li>Have you ever taken any action to reduce the amount you throw out?</li>
 
             </ul>
         </td>
         <td>
             Factors causing food wastage
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <ul>
+                <li>Do you ever share food with your friends and family? (eg bringing leftovers when you/they visit)</li>
+                <li>Do you ever order meals online? How often? Which services?</li>
+                <li>What is it you like most about ordering meals online?</li>
+                <li>When you order food online, was it planned? How far in advance?</li>
+                <li>What factors affect your decision to order meals?</li>
+                <li>Are there any situations in which you always order online?</li>
+                <li>Do you have any concerns about ordering meals online?</li>
+            </ul>
+        </td>
+        <td>
+            How people order food
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <ul>
+                <li>Can you remember a specific time you ordered a meal online? Perhaps the most recent or memorable
+                    time?</li>
+                <li>Which day was it? What time?</li>
+                <li>What did you do before/after eating?</li>
+                <li>Where you with anyone else? Who?</li>
+                <li>Which service did you use? Why?</li>
+                <li>What did you order?</li>
+                <li>How much did it cost, roughly?</li>
+                <li>How did you feel about the ordering process? Anything in particular that you loved/hated?</li>
+                <li>How did you feel about the delivery?</li>
+                <li>How did you feel about the food itself?</li>
+                <li>Is there anything you would change about the experience?</li>
+            </ul>
+        </td>
+        <td>
+            Specific instance
         </td>
     </tr>
 
