--- a/interviewguide.html
+++ b/interviewguide.html
@@ -89,7 +89,7 @@ food, and they role technology plays in their kitchens.</p>
             </ul>
         </td>
         <td>
-            Specific instance
+            Specific instance to understand more deeply how and why the participant orders meals online
         </td>
     </tr>
 
