added interview questions

--- a/interviewguide.html
+++ b/interviewguide.html
@@ -48,6 +48,9 @@ food, and they role technology plays in their kitchens.</p>
                 <li><s>Is food wastage a problem for you? If so, how does it happen?</s></li>
                 <li>Do you ever have to throw food out? Why?</li>
                 <li>Have you ever taken any action to reduce the amount you throw out?</li>
+                <li>Do you buy bulk foods a lot?</li>
+                <li>What type of food do you like to cook?</li>
+                <li>Do you make a plan before going to supermarket?</li>
 
             </ul>
         </td>
@@ -60,11 +63,13 @@ food, and they role technology plays in their kitchens.</p>
             <ul>
                 <li>Do you ever share food with your friends and family? (eg bringing leftovers when you/they visit)</li>
                 <li>Do you ever order meals online? How often? Which services?</li>
+                <li>When do you usually order food? Workdays or Weekend?</li>
                 <li>What is it you like most about ordering meals online?</li>
                 <li>When you order food online, was it planned? How far in advance?</li>
                 <li>What factors affect your decision to order meals?</li>
                 <li>Are there any situations in which you always order online?</li>
                 <li>Do you have any concerns about ordering meals online?</li>
+                <li>What factor would help you to decide the place you order meal from? </li>
             </ul>
         </td>
         <td>
