add to the interview guide

--- a/interviewguide.html
+++ b/interviewguide.html
@@ -46,6 +46,9 @@ food, and they role technology plays in their kitchens.</p>
             </ul>
         </td>
         <td>
+            Confirm that people waste food at home.<br>
+            Find out the reasons for household food wastage.<br>
+
 
         </td>
     </tr>
@@ -69,6 +72,7 @@ food, and they role technology plays in their kitchens.</p>
             </ul>
         </td>
         <td>
+            Relaxed and safe.
 
         </td>
     </tr>
