--- a/interviewguide.html
+++ b/interviewguide.html
@@ -4,6 +4,20 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>Interview Guide</title>
+
+    <script>
+        function switchPage(page){
+            if(page === 'one'){
+                document.getElementById('one').style.display = "none";
+                document.getElementById('two').style.display = "table";
+
+            }
+            if(page === 'two') {
+                document.getElementById('two').style.display = "none";
+                document.getElementById('one').style.display = "table";
+            }
+        }
+    </script>
 </head>
 <body>
 
@@ -25,6 +39,7 @@ food, and they role technology plays in their kitchens.</p>
 <table id="one">
     <caption>Setting the right foundation</caption>
     <tr>
+        <td>1. Context</td>
         <td>
             <ul>
                 <li>What is the context you're focusing on?</li>
@@ -33,12 +48,16 @@ food, and they role technology plays in their kitchens.</p>
             </ul>
         </td>
         <td>
-            The food wastage caused by individuals.<br>
-            Every individual who cook and lives a busy life. Increasing life pace leaves little time for them to
-            cook, making food wastage more likely to occur.<br>
+            <ul>
+                <li>The food wastage in the household setting.</li>
+                <li>Individuals who cook and live busy lives. For practicality (1 week to source participants
+                and unable to provide any substantial reward), our interviewees will be students.</li>
+                <li>We need to understand more deeply the causes of food waste in the home</li>
+            </ul>
         </td>
     </tr>
     <tr>
+        <td>2. Outcomes</td>
         <td>
             <ul>
                 <li>What is the desired outcome of this interview?</li>
@@ -46,13 +65,16 @@ food, and they role technology plays in their kitchens.</p>
             </ul>
         </td>
         <td>
-            Confirm that people waste food at home.<br>
-            Find out the reasons for household food wastage.<br>
-
+            <ul>
+                <li>Confirm that people waste food at home</li>
+                <li>Find out the reasons for household food wastage.</li>
+                <li>We propose that most food wastage in the home is a result of raw ingredients going bad.</li>
+            </ul>
 
         </td>
     </tr>
     <tr>
+        <td>3. Location</td>
         <td>
             <ul>
                 <li>Where would be a good place for you to have your conversation?</li>
@@ -60,10 +82,12 @@ food, and they role technology plays in their kitchens.</p>
             </ul>
         </td>
         <td>
-            Project room has been chosen to be the place for the interview.
+            A project room on campus has been chosen as the place for the interview. Given our participants are
+            students, this should be convenient and familiar for them.
         </td>
     </tr>
     <tr>
+        <td>4. Energy</td>
         <td>
             <ul>
                 <li>How would you like your interviewee to feel during and after the interview?</li>
@@ -72,11 +96,12 @@ food, and they role technology plays in their kitchens.</p>
             </ul>
         </td>
         <td>
-            Relaxed and safe.
+            Relaxed and safe, as if they're talking with a friend.
 
         </td>
     </tr>
     <tr>
+        <td>5. Medium</td>
         <td>
             <ul>
                 <li>What tools, artifacts or visuals might help prompt the interviewee's thinking?</li>
@@ -84,14 +109,14 @@ food, and they role technology plays in their kitchens.</p>
             </ul>
         </td>
         <td>
-
+            Jason: Maybe some pictures of food or something? Do you guys have any idea for this?
         </td>
     </tr>
 </table>
 <table id="two" style="display:none">
     <caption>Interview Guide</caption>
     <tr>
-        <th colspan="2">
+        <th>
             Your checklist
         </th>
         <th>
@@ -102,106 +127,88 @@ food, and they role technology plays in their kitchens.</p>
         </th>
     </tr>
     <tr>
-        <td width="5%">
-
-        </td>
-        <td>
-            Explain who you are and what your research is about.
-        </td>
-        <td rowspan="2">
-            <ul>
-                <li>How often do you cook at home?</li>
-                <li>What factors affect your decision whether or not to cook?</li>
-                <li>Do you typically cook for yourself, or for others?</li>
+        <td rowspan="0">
+            <!-- moved these to one cell, to make it easier to add/remove rows from the rest of the table -->
+            <ul id="checklist">
+                <li>Explain who you are and what your research is about.</li>
+                <li>Remind your participant how long the interview will take.</li>
+                <li>Tell your participant their answers are anonymous.</li>
+                <li>Explain who you are and what your research is about</li>
+                <li>Explain the role of the note taker.</li>
+                <li>Ask your participant to be honest and open with you -that's exactly what you need and
+                    there are no wrong or right answers,and they won't offend you in any way.</li>
+                <li>Explain that you might be asking 'obvious' questions and that you'll be asking 'why' a lot-
+                    you don't want to be led by your own assumptions.</li>
+                <li>Ask if they've got any questions before you begin the interview.</li>
             </ul>
         </td>
-        <td rowspan="2">
-            How and why people cook
-        </td>
-    </tr>
-    <tr>
-        <td width="5%">
 
-        </td>
         <td>
-            Remind your participant how long the interview will take.
-        </td>
-
-    </tr>
-    <tr>
-        <td width="5%">
-
-        </td>
-        <td>
-            Tell your participant their answers are anonymous.
-        </td>
-        <td rowspan="2">
             <ul>
-                <li>How and how often do usually you buy food? (go grocery, home delivery meal kit?)</li>
-                <li><s>Is food wastage a problem for you? If so, how does it happen?</s></li>
-                <li>Do you ever have to throw food out? Why?</li>
-                <li>Have you ever taken any action to reduce the amount you throw out?</li>
-                <li>Do you buy bulk foods a lot?</li>
+                <li>How often do you eat at home? Which meals?</li>
+                <li>Do you typically eat by yourself, or with others? Why?</li>
+                <li>(if eat with others) Do they have any dietary requirements different to yours? (eg vegan, allergy,
+                diet?)</li>
+
+            </ul>
+        </td>
+        <td>
+            How and when people eat meals
+        </td>
+    </tr>
+
+        <td>
+            <ul>
+                <li>On a typical week, how many meals would you buy "ready to eat"? This could include
+                restaurants, take-away, etc?</li>
+                <li>How often do you usually buy food?</li>
+                <li>Do you plan your meals before shopping? Why/why not?</li>
+                <li>Do you do your grocery shopping in store (instead of online)? Why?</li>
+                <li>Do you make a shopping list before buying food? Why</li>
+                <li>Do you ever buy bulk foods? How often? Why?</li>
                 <li>What type of food do you like to cook?</li>
-                <li>Do you make a plan before going to supermarket?</li>
 
             </ul>
-        <td rowspan="2">
-            Factors causing food wastage
+        <td>
+            How people buy food
         </td>
 
     </tr>
     <tr>
-        <td width="5%">
-
-        </td>
         <td>
-            Explain who you are and what your research is about
-        </td>
-    </tr>
-    <tr>
-        <td width="5%">
-
-        </td>
-        <td>
-            Explain the role of the note taker.
-        </td>
-        <td rowspan="2">
             <ul>
-                <li>Do you ever share food with your friends and family? (eg bringing leftovers when you/they visit)</li>
-                <li>Do you ever order meals online? How often? Which services?</li>
-                <li>When do you usually order food? Workdays or Weekend?</li>
-                <li>What is it you like most about ordering meals online?</li>
-                <li>When you order food online, was it planned? How far in advance?</li>
-                <li>What factors affect your decision to order meals?</li>
-                <li>Are there any situations in which you always order online?</li>
-                <li>Do you have any concerns about ordering meals online?</li>
-                <li>What factor would help you to decide the place you order meal from? </li>
+
+                <li>Do you ever have to throw food out? Why? (this question is particularly important, so make sure
+                to ask follow up questions based on their response)</li>
+                <li>What do you do with food you don't eat? (regular garbage, green bin, compost, dog?)</li>
+                <li>Have you ever taken any action to reduce the amount you throw out?</li>
             </ul>
         </td>
-        <td rowspan="2">
-            How people order food
-        </td>
-    </tr>
-    <tr>
-        <td width="5%">
-
-        </td>
         <td>
-            Ask your participant to be honest and open with you -that's exactly what you need and
-            there are no wrong or right answers,and they won't offend you in any way.
+            Factors leading to food waste (cooking)
         </td>
 
     </tr>
-    <tr>
-        <td width="5%">
 
+    <tr>
+        <td>
+            <ul>
+                <li>Do you ever have take away meals?</li>
+                <li>When you do, was it planned in advance? (before that day)</li>
+                <li>Are you ever surprised by the portion sizes? (larger than expected, smaller than expected,
+                    both?)</li>
+                <li>Are there ever any leftovers? What do you do with them? (eat them the next day? within a week?
+                    never?)</li>
+            </ul>
         </td>
         <td>
-            Explain that you might be asking 'obvious' questions and that you'll be asking 'why' a lot-
-            you don't want to be led by your own assumptions.
+            Factors leading to food waste (ordering)
         </td>
-        <td rowspan="2">
+    </tr>
+
+    <!-- this whole section too specific to our app? (not the problem of food waste in general)
+    <tr>
+        <td>
             <ul>
                 <li>Can you remember a specific time you ordered a meal online? Perhaps the most recent or memorable
                     time?</li>
@@ -217,37 +224,43 @@ food, and they role technology plays in their kitchens.</p>
                 <li>Is there anything you would change about the experience?</li>
             </ul>
         </td>
-        <td rowspan="2">
+        <td>
             Specific instance to understand more deeply how and why the participant orders meals online
         </td>
     </tr>
-    <tr>
-        <td width="5%">
-
-        </td>
-        <td>
-            Ask if they've got any questions before you begin the interview.
-        </td>
-    </tr>
+    -->
 
 </table>
 <p>This table is based on the <a href="InterviewGuideTemplate.pdf">"Interview Guide Template"</a> by Kasia Mierzejewska of MAKE Studios.</p>
-<p><a href="index.html">Back</a></p>
-<p id="test">aaa</p>
-<script>
-    function switchPage(page){
-        document.getElementById('test').innerHTML=page;
-        if(page === 'one'){
-            document.getElementById('one').style.display = "none";
-            document.getElementById('two').style.display = "table";
 
-        }
-        if(page === 'two') {
-            document.getElementById('two').style.display = "none";
-            document.getElementById('one').style.display = "table";
-        }
-    }
-</script>
+<h1>Plan</h1>
+<table id="plan">
+    <tr>
+        <th>Time</th>
+        <th>Participant</th>
+        <th>Interviewer</th>
+        <th>Note taker</th>
+    </tr>
+    <tr>
+        <td>3-4pm</td>
+        <td>Meg</td>
+        <td>Blaithe</td>
+        <td>Jason</td>
+    </tr>
+    <tr>
+        <td>4:15-5:15pm</td>
+        <td>(Blaithe's Friend)</td>
+        <td>Jason</td>
+        <td>Wendy</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td>Wendy</td>
+        <td>Blaithe</td>
+    </tr>
+</table>
+<p><a href="index.html">Back</a></p>
 </body>
 
 
