added interview questions

--- a/interviewguide.html
+++ b/interviewguide.html
@@ -127,7 +127,7 @@ food, and they role technology plays in their kitchens.</p>
         </th>
     </tr>
     <tr>
-        <td rowspan="0">
+        <td rowspan="4">
             <!-- moved these to one cell, to make it easier to add/remove rows from the rest of the table -->
             <ul id="checklist">
                 <li>Explain who you are and what your research is about.</li>
@@ -145,10 +145,12 @@ food, and they role technology plays in their kitchens.</p>
 
         <td>
             <ul>
+                <li>Can you please describe to me your meals last week?</li>
                 <li>How often do you eat at home? Which meals?</li>
                 <li>Do you typically eat by yourself, or with others? Why?</li>
                 <li>(if eat with others) Do they have any dietary requirements different to yours? (eg vegan, allergy,
                 diet?)</li>
+
 
             </ul>
         </td>
@@ -162,11 +164,14 @@ food, and they role technology plays in their kitchens.</p>
                 <li>On a typical week, how many meals would you buy "ready to eat"? This could include
                 restaurants, take-away, etc?</li>
                 <li>How often do you usually buy food?</li>
+                <li>What kind of food do you usually buy and why? (maybe they buy fresh food and we can discuss food wastage.)</li>
+                <li>What factors affect the food you buy? (maybe they concern about the shelf life and will tell us how they try to reduce food wastage..)</li>
                 <li>Do you plan your meals before shopping? Why/why not?</li>
                 <li>Do you do your grocery shopping in store (instead of online)? Why?</li>
                 <li>Do you make a shopping list before buying food? Why</li>
                 <li>Do you ever buy bulk foods? How often? Why?</li>
                 <li>What type of food do you like to cook?</li>
+
 
             </ul>
         <td>
@@ -178,7 +183,7 @@ food, and they role technology plays in their kitchens.</p>
         <td>
             <ul>
 
-                <li>Do you ever have to throw food out? Why? (this question is particularly important, so make sure
+                <li>Do you ever have to throw food out? How often? Why? (this question is particularly important, so make sure
                 to ask follow up questions based on their response)</li>
                 <li>What do you do with food you don't eat? (regular garbage, green bin, compost, dog?)</li>
                 <li>Have you ever taken any action to reduce the amount you throw out?</li>
