added interview questions

--- a/interviewguide.html
+++ b/interviewguide.html
@@ -148,6 +148,7 @@ food, and they role technology plays in their kitchens.</p>
                 <li>Can you please describe to me your meals last week?</li>
                 <li>How often do you eat at home? Which meals?</li>
                 <li>Do you typically eat by yourself, or with others? Why?</li>
+                <li>What factors influence your choice of meal? (Eat meal made by yourself or take away)</li>
                 <li>(if eat with others) Do they have any dietary requirements different to yours? (eg vegan, allergy,
                 diet?)</li>
 
@@ -158,7 +159,7 @@ food, and they role technology plays in their kitchens.</p>
             How and when people eat meals
         </td>
     </tr>
-
+    <tr>
         <td>
             <ul>
                 <li>On a typical week, how many meals would you buy "ready to eat"? This could include
@@ -169,11 +170,13 @@ food, and they role technology plays in their kitchens.</p>
                 <li>Do you plan your meals before shopping? Why/why not?</li>
                 <li>Do you do your grocery shopping in store (instead of online)? Why?</li>
                 <li>Do you make a shopping list before buying food? Why</li>
+                <li>If yes, do you found it helpful for food wastage?</li>
                 <li>Do you ever buy bulk foods? How often? Why?</li>
                 <li>What type of food do you like to cook?</li>
 
 
             </ul>
+        </td>>
         <td>
             How people buy food
         </td>
@@ -185,6 +188,8 @@ food, and they role technology plays in their kitchens.</p>
 
                 <li>Do you ever have to throw food out? How often? Why? (this question is particularly important, so make sure
                 to ask follow up questions based on their response)</li>
+                <li>How do you treat badly prepared food?</li>
+                <li>How do you treat expired food?</li>
                 <li>What do you do with food you don't eat? (regular garbage, green bin, compost, dog?)</li>
                 <li>Have you ever taken any action to reduce the amount you throw out?</li>
             </ul>
@@ -249,12 +254,12 @@ food, and they role technology plays in their kitchens.</p>
     <tr>
         <td>3-4pm</td>
         <td>Meg</td>
-        <td>Blaithe</td>
+        <td>Blythe</td>
         <td>Jason</td>
     </tr>
     <tr>
         <td>4:15-5:15pm</td>
-        <td>(Blaithe's Friend)</td>
+        <td>Thomas</td>
         <td>Jason</td>
         <td>Wendy</td>
     </tr>
@@ -262,7 +267,7 @@ food, and they role technology plays in their kitchens.</p>
         <td></td>
         <td></td>
         <td>Wendy</td>
-        <td>Blaithe</td>
+        <td>Blythe</td>
     </tr>
 </table>
 <p><a href="index.html">Back</a></p>
