added more interview questions

--- a/interviewguide.html
+++ b/interviewguide.html
@@ -145,8 +145,20 @@ food, and they role technology plays in their kitchens.</p>
 
         <td>
             <ul>
-                <li>Can you please describe to me your meals last week?</li>
-                <li>How often do you eat at home? Which meals?</li>
+                <li>
+                    <dl>
+                        <dt>Can you please describe to me your meals last week?</dt>
+                        <dd>- What did you eat for lunch/dinner?</dd>
+                        <dd>- How does it differ between work days and weekend?</dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl>
+                        <dt>How often do you eat at home? Which meals?</dt>
+                        <dd>- If cook, do you usually cook for just one meal or multiple meals?</dd>
+                        <dd>- If multiple, do you ended up finish everything? Why?</dd>
+                    </dl>
+                </li>
                 <li>Do you typically eat by yourself, or with others? Why?</li>
                 <li>What factors influence your choice of meal? (Eat meal made by yourself or take away)</li>
                 <li>(if eat with others) Do they have any dietary requirements different to yours? (eg vegan, allergy,
@@ -162,21 +174,78 @@ food, and they role technology plays in their kitchens.</p>
     <tr>
         <td>
             <ul>
-                <li>On a typical week, how many meals would you buy "ready to eat"? This could include
-                restaurants, take-away, etc?</li>
-                <li>How often do you usually buy food?</li>
-                <li>What kind of food do you usually buy and why? (maybe they buy fresh food and we can discuss food wastage.)</li>
-                <li>What factors affect the food you buy? (maybe they concern about the shelf life and will tell us how they try to reduce food wastage..)</li>
-                <li>Do you plan your meals before shopping? Why/why not?</li>
-                <li>Do you do your grocery shopping in store (instead of online)? Why?</li>
-                <li>Do you make a shopping list before buying food? Why</li>
-                <li>If yes, do you found it helpful for food wastage?</li>
-                <li>Do you ever buy bulk foods? How often? Why?</li>
+                <li>
+                    <dl>
+                        <dt>How often do you usually buy food?</dt>
+                        <dd>- About how many days of food would you buy in advance?</dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl>
+                        <dt>What kind of food do you usually buy and why?</dt>
+                        <dd>- Do you usually consume all the food you bought?</dd>
+                        <dd>- If not, What kind of food you usually does not consume all?</dd>
+                        <dd>(maybe they buy fresh food and we can discuss food wastage.)</dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl>
+                        <dt>What factors affect the food you buy?</dt>
+                        <dd>- Price? Taste? Shelf time? Why?</dd>
+                        <dd>(maybe they concern about the shelf life and will tell us how they try to reduce food
+                            wastage..)</dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl>
+                        <dt>Do you plan your meals before shopping? Why/why not?</dt>
+                        <dt>Do you make a shopping list before buying food? Why?</dt>
+                        <dd>- Do you always follow the plan while shopping?</dd>
+                        <dd>- If follow the plan, do you feel you are minimising food wastage?(because you can always
+                            finish up everything you bought?)</dd>
+                        <dd>- If not follow the plan, do you found it usually harder to finish up everything than having
+                            a plan(something spoiled before you consumed it?)</dd>
+                        <dd>- Do you ever experience impulse buying?</dd>
+                        <dd>- If yes,What did you do with those food when you found you does not like it?</dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl>
+                        <dt>Can you describe the last time when you buy food in supermarket?</dt>
+                        <dd>- Did you plan ahead? </dd>
+                        <dd>- Please explain the thought process when you choose a product.</dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl>
+                        <dt>Is it very often that you change your mind about what you are going to have for meals?</dt>
+                        <dd>- Do you usually buy the ingredients for th meal on the day you will make the meal or in
+                        advance?</dd>
+                        <dd>- If in advance, after you change you mind, what will you do with all the ingredients
+                        you bought before?</dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl>
+                        <dt>Do you do your grocery shopping in store (instead of online)? Why?</dt>
+                        <dd>- Can you tell me about the last time you bought groceries?</dd>
+                        <dd>- Were you there for anything specific?</dd>
+                        <dd>- When was it?</dd>
+                        <dd>- Can you tell me three of the things you bought, and why?</dd>
+                        <dd>- Did you end up using all of them? (or still plan to)</dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl>
+                        <dt>Do you ever buy bulk foods? How often? Why?</dt>
+                        <dd>- Do you always finish up all the foods you bought?</dd>
+                    </dl>
+                </li>
                 <li>What type of food do you like to cook?</li>
 
 
             </ul>
-        </td>>
+        </td>
         <td>
             How people buy food
         </td>
@@ -186,10 +255,22 @@ food, and they role technology plays in their kitchens.</p>
         <td>
             <ul>
 
-                <li>Do you ever have to throw food out? How often? Why? (this question is particularly important, so make sure
-                to ask follow up questions based on their response)</li>
-                <li>How do you treat badly prepared food?</li>
-                <li>How do you treat expired food?</li>
+                <li>
+                    <dl>
+                        <dt>Do you ever have to throw food out? How often? Why?</dt>
+                        <dd>- What kind of food did you throw away? Why?</dd>
+                        <dd>- Badly prepared food? Expired Food?</dd>
+                        <dd>- Are there any types of food that you find you often throw out? Why?</dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl>
+                        <dt>Can you tell me about the last time you had to throw away food?</dt>
+                        <dd>- What was it? How much?</dd>
+                        <dd>- How long ago had you bought it?</dd>
+                        <dd>- Did you have to throw away the whole amount, or just a leftover portion?</dd>
+                    </dl>
+                </li>
                 <li>What do you do with food you don't eat? (regular garbage, green bin, compost, dog?)</li>
                 <li>Have you ever taken any action to reduce the amount you throw out?</li>
             </ul>
@@ -204,9 +285,20 @@ food, and they role technology plays in their kitchens.</p>
         <td>
             <ul>
                 <li>Do you ever have take away meals?</li>
+                <li>On a typical week, how many meals would you buy "ready to eat"? This could include
+                    restaurants, take-away, etc?</li>
                 <li>When you do, was it planned in advance? (before that day)</li>
-                <li>Are you ever surprised by the portion sizes? (larger than expected, smaller than expected,
-                    both?)</li>
+                <li>Do you prefer to stick to one restaurant that you are familiar with or you prefer exploring new
+                    one?
+                </li>
+                <li>
+                    <dl>
+                        <dt>Are you ever surprised by the portion sizes? (larger than expected, smaller than expected,
+                            both?)
+                        </dt>
+                        <dd>- If yes,what did you do with it?</dd>
+                    </dl>
+                </li>
                 <li>Are there ever any leftovers? What do you do with them? (eat them the next day? within a week?
                     never?)</li>
             </ul>
